# metaflow-bacalhau

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dev/: Dockerfile  docker-compose.yml  env.sh  metaflow_config.py  start.sh  stop.sh
examples/: e2e_test.py  hello_bacalhau.py
metaflow_extensions/bacalhau/plugins/: __init__.py  bacalhau_cli.py  bacalhau_decorator.py  bacalhau_exceptions.py  bacalhau_job.py
tests/: conftest.py  test_decorator.py  test_job.py
