[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaflow-bacalhau"
version = "0.1.0"
description = "Bacalhau distributed compute backend for Metaflow"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8,<3.12"
keywords = ["metaflow", "bacalhau", "distributed-compute", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "metaflow>=2.9",
    "bacalhau-sdk>=1.0.0",
    "bacalhau-apiclient>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Repository = "https://github.com/npow/metaflow-bacalhau"
Issues = "https://github.com/npow/metaflow-bacalhau/issues"

[tool.hatch.build.targets.wheel]
packages = ["metaflow_extensions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
